Add fast function lookup-by-signature support
Add support to lookup a function directly by its declared signature.
Before that, looking up a function which uses the signature based
registry, resulted in a full expensive signature match logic.
This improvement may fix related existing performance regressions.

Function implementations must carry the signature and also the signature
must be streamable in order for this to work.

We carry now both, a `FunctionIdent` and a `Signature` all through the
code base to be able to still support the old registry to migrate
all functions iterative.
Eventually the `FunctionInfo` (and `FunctionIdent`) should be replaced
by a `Signature` after all functions are migrated.